small minor css fix for login visibility

--- a/public/stylesheets/facebook.css
+++ b/public/stylesheets/facebook.css
@@ -12,6 +12,9 @@ body {
   bottom: 0;
   background: #FF5A00;
 }
+#navigation .faint {
+  color: #fff;
+}
 .district {
   background: none;
 }
